recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:9: error: not found: value levels
		sierpinski(levels-1, length);
                           ^